--- a/paginas/style.css
+++ b/paginas/style.css
@@ -30,28 +30,27 @@ a {
 }
   
   /* Estilizando os botões abaixo do banner */
-.button_area {
+  .button_area {
     display: flex;
-    justify-content: center;
-    margin-top: 20px;
-}
+    flex-direction: row; /* Empilhar os botões verticalmente */
+    align-items: center; /* Centralizar horizontalmente os botões */
+    margin-top: 10px;
+  }
+    
+  .button_area a {
+    width: 100%; /* Definir a largura dos botões como 100% */
+    max-width: 250px; /* Definir uma largura máxima para evitar que os botões fiquem muito largos em telas grandes */
+    margin: 5px;
+  }
   
-.button_area a {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    display: inline-block;
-    text-decoration: none;
-    padding: 10px 20px;
-    background-color: #f0f0f0;
-    color: #000;
-    border: 1px solid #ccc;
-    border-radius: 5px; /* Tornar os botões retangulares */
-    transition: background-color 0.3s ease; /* Adicionar transição no efeito hover */
-}
-  
-.button_area a:hover {
-    background-color: #ccc; /* Cor de fundo ao passar o mouse */
-    color: #fff; /* Cor do texto ao passar o mouse */
-}
+  .button_area a img {
+    width: 150px; /* Defina o tamanho desejado */
+    height: 53px; /* Defina o tamanho desejado */
+  }
+    
+  .button_area a img:hover {
+    transform: scale(1.1); /* Aumentar em 10% no hover */
+  }
 
 .site-container {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -120,8 +119,9 @@ margin: 5px;
 max-width: 90%;
 }
   
-.button_area {
-  width: 75%;
+.button_area a img {
+  width: 100%; /* Defina o tamanho desejado para dispositivos móveis */
+  height: auto; /* Permita que a altura seja ajustada automaticamente */
 }
 
 .bannerbot {
